# sra

./: .gitignore  CLAUDE.md  DESIGN_TOOL_CACHING.md  IMPLEMENTATION.md  README.md  SPEC_ANALYSIS.md  SPEC_PROFILE.md  STYLE.md  autotuner.md  evaluate_business_model.md  evaluate_competitive.md  evaluate_profile.md  experiments.tsv  initial_instructions.txt  pyproject.toml  research.py  test.html  web.py
.claude/commands/: fetch_edgar.md  fetch_fundamental.md  fetch_perplexity.md  fetch_perplexity_analysis.md  fetch_profile.md  fetch_technical.md  fetch_wikipedia.md
dags/: sra.yaml
docs/plans/: 2026-02-23-dag-schema-redesign-design.md  2026-02-23-dag-schema-v2.md  2026-03-02-web-runner-v2.md  2026-03-07-research-swarm-design.md  2026-03-13-knowledge-base-refactor.md  2026-03-16-research-quality-improvements.md
scripts/: gen_mcp_configs.py
skills/: assemble_text.py  claude_runner.py  config.py  db.py  db_commands.py  final_assembly.py  render_final.py  render_template.py  schema.py  utils.py
skills/chunk_index/: __init__.py  append_index.py  build_index.py  chunk_documents.py  chunk_research.py  index_research.py
skills/custom_research/: custom_research.py
skills/fetch_detailed_profile_info/: fetch_detailed_profile_info.py
skills/fetch_edgar/: fetch_edgar.py  filing_items.py
skills/fetch_fundamental/: fetch_fundamental.py  sankey.py
skills/fetch_perplexity/: fetch_perplexity.py
skills/fetch_perplexity_analysis/: fetch_perplexity_analysis.md  fetch_perplexity_analysis.py
skills/fetch_profile/: fetch_profile.md  fetch_profile.py
skills/fetch_technical/: fetch_technical.py
skills/fetch_wikipedia/: fetch_wikipedia.py
skills/identify_peers/: identify_peers.py
skills/mcp_proxy/: mcp_proxy.py
skills/search_index/: search_index.py
static/: index.html
templates/: assemble_body.md.j2  assemble_report.md.j2  final_report.md.j2  mcp-research.json.j2
tests/: _proxy_harness.py  conftest.py  test_chunk_documents.py  test_chunk_index_helpers.py  test_claude_runner.py  test_db.py  test_db_state.py  test_db_tasks.py  test_final_assembly.py  test_identify_peers.py  test_index_research.py  test_mcp_proxy.py  test_render_template.py  test_research_hardchecks.py  test_research_invoke.py  test_sankey.py  test_schema.py  test_schema_models.py  test_search_index.py  test_utils.py  test_web.py
