[project]
name = "sra5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.83.0",
    "beautifulsoup4>=4.14.3",
    "claude-agent-sdk>=0.1.39",
    "edgartools>=5.16.3",
    "fastapi>=0.128.8",
    "finnhub-python>=2.4.27",
    "ipykernel>=7.2.0",
    "kaleido>=1.2.0",
    "lancedb>=0.29.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "lxml>=5.4.0",
    "mcp>=1.26.0",
    "openai>=2.21.0",
    "openbb>=4.6.0",
    "openbb-alpha-vantage>=1.5.1",
    "openbb-benzinga>=1.5.1",
    "openbb-biztoc>=1.5.1",
    "openbb-cboe>=1.5.1",
    "openbb-charting>=2.5.0",
    "openbb-commodity>=1.5.0",
    "openbb-core>=1.6.0",
    "openbb-crypto>=1.6.0",
    "openbb-currency>=1.6.0",
    "openbb-derivatives>=1.6.0",
    "openbb-ecb>=1.5.1",
    "openbb-econdb>=1.4.1",
    "openbb-econometrics>=1.7.0",
    "openbb-economy>=1.6.0",
    "openbb-equity>=1.6.0",
    "openbb-etf>=1.6.0",
    "openbb-federal-reserve>=1.5.1",
    "openbb-finra>=1.5.1",
    "openbb-finviz>=1.4.1",
    "openbb-fixedincome>=1.6.0",
    "openbb-fmp>=1.5.2",
    "openbb-fred>=1.5.1",
    "openbb-government-us>=1.5.2",
    "openbb-index>=1.6.0",
    "openbb-intrinio>=1.5.1",
    "openbb-nasdaq>=1.5.1",
    "openbb-news>=1.6.0",
    "openbb-oecd>=1.5.1",
    "openbb-polygon>=1.5.1",
    "openbb-quantitative>=1.6.0",
    "openbb-regulators>=1.6.0",
    "openbb-sec>=1.5.1",
    "openbb-seeking-alpha>=1.5.1",
    "openbb-stockgrid>=1.5.1",
    "openbb-technical>=1.6.0",
    "openbb-tiingo>=1.5.1",
    "openbb-tmx>=1.4.1",
    "openbb-tradier>=1.4.1",
    "openbb-tradingeconomics>=1.5.1",
    "openbb-wsj>=1.5.1",
    "openbb-yfinance>=1.5.2",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sec-api>=1.0.32",
    "sec-downloader>=0.11.2",
    "sec-edgar-downloader>=5.1.0",
    "sec-parser>=0.58.1",
    "streamlit>=1.54.0",
    "ta-lib>=0.6.8",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
    "weasyprint>=68.1",
    "websockets>=16.0",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.9.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]
